[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Sprites/HUD/Border.png" type="Texture" id=2]
[ext_resource path="res://Sprites/HUD/LeftBack.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HUD/RightBack.png" type="Texture" id=4]
[ext_resource path="res://Resources/Shaders/Vignette.tres" type="Shader" id=5]
[ext_resource path="res://Sprites/HUD/Egg/EggSymbol.png" type="Texture" id=6]
[ext_resource path="res://Sprites/HUD/Money/MoneySymbol.png" type="Texture" id=7]
[ext_resource path="res://Resources/Font/HeartFont.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Sprites/HUD/Health/EmptyHealth.png" type="Texture" id=9]
[ext_resource path="res://Sprites/HUD/Health/HalfHealth.png" type="Texture" id=10]
[ext_resource path="res://Sprites/HUD/Health/FullHealth.png" type="Texture" id=11]
[ext_resource path="res://Sprites/HUD/Power/Progress.png" type="Texture" id=12]
[ext_resource path="res://Sprites/HUD/Power/Under.png" type="Texture" id=13]
[ext_resource path="res://Sprites/HUD/Power/Over.png" type="Texture" id=14]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/vignette_intensity = 0.1
shader_param/vignette_opacity = 0.5
shader_param/vignette_rgb = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 8
extra_spacing_space = -1
font_data = ExtResource( 8 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource( 1 )
margin_right = 320.0
margin_bottom = 240.0

[node name="Border" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 240.0
texture = ExtResource( 2 )

[node name="LeftBack" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 41.0
texture = ExtResource( 3 )

[node name="RightBack" type="TextureRect" parent="."]
margin_left = 287.0
margin_top = 1.0
margin_right = 327.0
margin_bottom = 41.0
texture = ExtResource( 4 )

[node name="Health" type="Control" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 43.0
margin_bottom = 43.0

[node name="HealthEmpty" type="TextureRect" parent="Health"]
margin_top = -1.0
margin_right = 9.0
margin_bottom = 8.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2

[node name="HealthHalf" type="TextureRect" parent="Health"]
margin_top = -1.0
margin_right = 9.0
margin_bottom = 8.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="HealthFull" type="TextureRect" parent="Health"]
margin_top = -1.0
margin_right = 9.0
margin_bottom = 8.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="Money" type="Control" parent="."]
margin_left = 156.0
margin_right = 196.0
margin_bottom = 40.0

[node name="MoneySymbol" type="TextureRect" parent="Money"]
margin_left = 134.0
margin_top = 3.0
margin_right = 174.0
margin_bottom = 43.0
texture = ExtResource( 7 )

[node name="Amount" type="Label" parent="Money"]
margin_left = 139.0
margin_top = 6.0
margin_right = 179.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Eggs" type="Control" parent="."]
margin_left = 156.0
margin_right = 196.0
margin_bottom = 40.0

[node name="EggSymbol" type="TextureRect" parent="Eggs"]
margin_left = 152.0
margin_top = 14.0
margin_right = 192.0
margin_bottom = 54.0
texture = ExtResource( 6 )

[node name="Amount" type="Label" parent="Eggs"]
margin_left = 144.0
margin_top = 17.0
margin_right = 184.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="Power" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PowerProgress" type="TextureProgress" parent="Power"]
margin_left = 1.0
margin_top = 12.0
margin_right = 41.0
margin_bottom = 52.0
texture_under = ExtResource( 13 )
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 12 )

[node name="Details" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
